# src/OpenApi/openapi.json
@@ -966,6 +966,43 @@
         }
       }
     },
+    "/coupon/admin/{couponId}/{status}": {
+      "patch": {
+        "tags": ["admin-coupon-controller"],
+        "operationId": "updateCouponStatus",
+        "parameters": [
+          {
+            "name": "couponId",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int64"
+            }
+          },
+          {
+            "name": "status",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "*/*": {
+                "schema": {
+                  "$ref": "#/components/schemas/ResultCoupon"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/admin/seller/{id}/status/{status}": {
       "patch": {
         "tags": ["admin-controller"],
@@ -2161,9 +2198,6 @@
           "username": {
             "type": "string"
           },
-          "signedOut": {
-            "type": "boolean"
-          },
           "authorities": {
             "type": "array",
             "items": {
@@ -2172,6 +2206,9 @@
           },
           "vat": {
             "type": "string"
+          },
+          "signedOut": {
+            "type": "boolean"
           },
           "enabled": {
             "type": "boolean"
@@ -2281,14 +2318,14 @@
           "username": {
             "type": "string"
           },
-          "signedOut": {
-            "type": "boolean"
-          },
           "authorities": {
             "type": "array",
             "items": {
               "$ref": "#/components/schemas/GrantedAuthority"
             }
+          },
+          "signedOut": {
+            "type": "boolean"
           },
           "accountNonExpired": {
             "type": "boolean"
@@ -3092,13 +3129,13 @@
       "PageProduct": {
         "type": "object",
         "properties": {
-          "totalPages": {
-            "type": "integer",
-            "format": "int32"
-          },
           "totalElements": {
             "type": "integer",
             "format": "int64"
+          },
+          "totalPages": {
+            "type": "integer",
+            "format": "int32"
           },
           "size": {
             "type": "integer",
@@ -3151,16 +3188,16 @@
               "$ref": "#/components/schemas/SortObject"
             }
           },
-          "pageNumber": {
-            "type": "integer",
-            "format": "int32"
-          },
           "pageSize": {
             "type": "integer",
             "format": "int32"
           },
           "paged": {
             "type": "boolean"
+          },
+          "pageNumber": {
+            "type": "integer",
+            "format": "int32"
           },
           "unpaged": {
             "type": "boolean"
